src/objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Account_number__c</fullName>
        <formula>Opportunity__r.Account_with_IBB__r.Name</formula>
        <label>Account number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantName__c</fullName>
        <formula>Prospect_Customer__r.FirstName + &quot; &quot; +  Prospect_Customer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicantName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Number__c</fullName>
        <label>Applicant Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Reference_Number__c</fullName>
        <description>This reference number is generated based on the application type the applicant has applied for e.g if they have applied for a HPP product their reference number will start with HPP and if they applied for a liabilities product then their ID will start with LIB</description>
        <formula>IF( Opportunity__r.RecordTypeId = &quot;012M00000004MS5&quot; ,  &quot;HPP&quot;+Name  ,
IF( Opportunity__r.RecordTypeId = &quot;012M00000004MS0&quot; , &quot;LIB&quot;+Name , Name)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPF Relationship</label>
        <referenceTo>CPF_Relationship__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_name__c</fullName>
        <formula>Prospect_Customer__r.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTBQ1__c</fullName>
        <label>HTBQ1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTBQ2__c</fullName>
        <label>HTBQ2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTBQ3__c</fullName>
        <label>HTBQ3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_card_for_conga__c</fullName>
        <formula>IF( Has_Card__c = true, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has card for conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Beneficialowner__c</fullName>
        <label>Is_ Beneficialowner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Director__c</fullName>
        <label>Is Director</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Settlor__c</fullName>
        <label>Is_ Settlor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Shareholder__c</fullName>
        <label>Is Shareholder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Signatory__c</fullName>
        <label>Is Signatory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Trustee__c</fullName>
        <label>Is_Trustee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandate_Limit__c</fullName>
        <label>Mandate Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandate_Unlimited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandate Unlimited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandate_unlimited_for_conga__c</fullName>
        <formula>IF( Mandate_Unlimited__c = true, &apos;Unlimited&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mandate unlimited for conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position_Held__c</fullName>
        <label>Position Held</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Account Holder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <label>Prospect/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shareholder_Percentage__c</fullName>
        <label>Shareholder Percentage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Signature_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Created for Conga Composer - Please do not delete</description>
        <label>Signature Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Credit Check</fullName>
                    <default>true</default>
                    <label>Pre-Credit Check</label>
                </value>
                <value>
                    <fullName>Submit to Decision Engine</fullName>
                </value>
                <value>
                    <fullName>Performed Credit Check</fullName>
                </value>
                <value>
                    <fullName>Created in EBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>